chore: Bump to 3.0.2

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,13 @@
+## [3.0.2] - 2025-08-20
+
+### Changed
+
+- 优化机器码生成逻辑
+
+### Fixed
+
+- 修复 redis url 不支持 rediss 协议的问题
+
 ## [3.0.1] - 2025-08-20
 
 ### Fixed
